# lib-ucv

./: ProjectHome.md  README.md
lib_ar/: lib_ar.vcxproj
lib_ar_gui_test/: ArTestDlg.cpp  ArTestDlg.h  FiducialTestDlg.cpp  FiducialTestDlg.h  FiducialTestDlg.ui  lib_ar_gui_test.vcxproj.filters
lib_math/: ReadMe.txt  lib_math.vcxproj
ucv/: CMakeLists.txt  ucv.sln
ucv/android/BaldzAR/: .classpath  .project  AndroidManifest.xml
ucv/android/BaldzAR/res/drawable/: marker_button.xml  start_button.xml  stop_button.xml
ucv/android/BaldzAR/res/layout/: hud.xml  slider_preference.xml
ucv/android/BaldzAR/res/values/: strings.xml
ucv/android/BaldzAR/res/xml/: settings.xml
ucv/android/BaldzAR/src/com/baldzarika/: ARFiducialSystem.java  BaldzAR.java  BaldzARApp.java  BaldzARSettings.java  LevelIndicator.java  SliderPreference.java
ucv/android/ITGMADemo/res/layout/: hud.xml
ucv/android/ITGMADemo/res/values/: strings.xml
ucv/android/ITGMADemo/src/com/itgma/: Demo.java  DemoApp.java  DemoSettings.java  MeshLoader.java
ucv/android/com.baldzarika.ar/: .cproject  AndroidManifest.xml
ucv/android/com.baldzarika.ar.test.App/: .classpath  .project  AndroidManifest.xml
ucv/android/com.baldzarika.ar.test.AppTest/: .classpath
ucv/android/com.baldzarika.ar.test.AppTest/res/values/: strings.xml
ucv/android/com.baldzarika.ar.test.AppTest/src/com/baldzarika/ar/test/: FiducialTest.java
ucv/android/com.baldzarika.ar/jni/: Android.mk  Application.mk
ucv/android/com.baldzarika.ar/jni/include/: com_baldzarika_ar_Frame.h  com_baldzarika_ar_Marker.h  com_baldzarika_ar_Tracker.h  com_baldzarika_ar_Tracker_MarkerState.h  com_baldzarika_ar_Tracker_MarkerStateCallback.h  com_baldzarika_ar_fiducial_BCHMarkerModel.h  com_baldzarika_ar_fiducial_Detector.h  com_baldzarika_ar_fiducial_Detector_Callback.h  com_baldzarika_ar_fiducial_MarkerModel.h  com_baldzarika_ar_markerless_Tracker.h  config.h
ucv/android/com.baldzarika.ar/jni/include/com/baldzarika/ar/: Marker.h  Size2.h  Tracker.h
ucv/android/com.baldzarika.ar/jni/include/com/baldzarika/ar/fiducial/: Detector.h  Tracker.h
ucv/android/com.baldzarika.ar/jni/src/: support.cpp
ucv/android/com.baldzarika.ar/jni/src/com/baldzarika/ar/: Frame.cpp  Marker.cpp  Tracker.cpp
ucv/android/com.baldzarika.ar/jni/src/com/baldzarika/ar/fiducial/: BCHMarkerModel.cpp  Detector.cpp  MarkerModel.cpp  Tracker.cpp
ucv/android/com.baldzarika.ar/jni/src/com/baldzarika/ar/markerless/: Marker.cpp  Tracker.cpp
ucv/android/com.baldzarika.ar/src/com/baldzarika/ar/: Frame.java  Marker.java  Tracker.java
ucv/android/com.baldzarika.ar/src/com/baldzarika/ar/fiducial/: Detector.java  MarkerModel.java
ucv/android/ucv_test/: .cproject  .project
ucv/android/ucv_test/jni/: Android.mk  UCVActivity.cpp  ucv_test.cpp
ucv/lib_ar/: lib_ar.vcxproj  lib_ar.vcxproj.filters
ucv/lib_ar/include/baldzarika/ar/: config.h  marker.h  tracker.h
ucv/lib_ar/include/baldzarika/ar/fiducial/: bch_marker_model.h  bch_model.h  detector.h  marker_model.h  qr_marker_model.h  typedefs.h
ucv/lib_ar/include/baldzarika/ar/markerless/: tracker.h  typedefs.h
ucv/lib_ar/src/baldzarika/ar/: marker.cpp  tracker.cpp
ucv/lib_ar/src/baldzarika/ar/fiducial/: bch_marker_model.cpp  bch_model.cpp  detector.cpp  qr_marker_model.cpp  tracker.cpp
ucv/lib_ar/src/baldzarika/ar/markerless/: tracker.cpp
ucv/lib_ar_gui_test/: ArTestDlg.cpp  ArTestDlg.h  ArTestDlg.ui  CannyTestDlg.h  CannyTestDlg.ui  FiducialTestPreviewWidget.cpp  Prec.h  PreviewWidget.cpp  PreviewWidget.h  SURFTestDlg.cpp  SURFTestDlg.h  SURFTestDlg.ui  SURFTestWidget.h  lib_ar_gui_test.qrc  lib_ar_gui_test.rc  lib_ar_gui_test.vcxproj  main.cpp
ucv/lib_ar_gui_test/GeneratedFiles/: qrc_lib_ar_gui_test.cpp  ui_ArTestDlg.h  ui_CannyTestDlg.h  ui_FiducialTestDlg.h  ui_SURFTestDlg.h
ucv/lib_ar_gui_test/GeneratedFiles/Debug/: moc_ArTestDlg.cpp  moc_FiducialTestPreviewWidget.cpp  moc_SURFTestWidget.cpp
ucv/lib_ar_gui_test/GeneratedFiles/Release/: moc_ArTestDlg.cpp  moc_CannyTestWidget.cpp  moc_FiducialTestDlg.cpp  moc_FiducialTestPreviewWidget.cpp  moc_PreviewWidget.cpp  moc_SURFTestDlg.cpp  moc_SURFTestWidget.cpp
ucv/lib_ar_gui_test_setup/: lib_ar_gui_test_setup.vdproj
ucv/lib_ar_test/: lib_ar_test.vcxproj  test.cpp
ucv/lib_math/: CMakeLists.txt  lib_math.vcxproj  lib_math.vcxproj.filters
ucv/lib_math/include/baldzarika/math/: box2.h  config.h  fixed_point.h  jacobi.h  matrix.h  matrix_ops.h  point2.h  size2.h  vector.h  vector_ops.h
ucv/lib_math/include/baldzarika/math/ec/galois/: field.h  field_element.h  field_polynomial.h  field_symbol.h
ucv/lib_math/include/baldzarika/math/ec/reed_solomon/: block.h  decoder.h
ucv/lib_math_test/: test.cpp
ucv/lib_ucv/: CMakeLists.txt  lib_ucv.vcxproj  lib_ucv.vcxproj.filters
ucv/lib_ucv/include/baldzarika/ucv/: adaptive_treshold.h  approximate_polygon.h  binarize.h  camera_pose.h  canny.h  config.h  contour.h  convert.h  convert_scale.h  corners_subpixel.h  estimate_rotation.h  extract_surf_descriptor.h  feature_point.h  find_otsu_threshold.h  fixed_point.h  gaussian_blur.h  gil_channel_traits.h  good_features_detector.h  homography.h  integral.h  io.h  jacobi.h  kalman_filter.h  klt_tracker.h  masked_region.h  match_feature_points.h  matrix.h  norm.h  perspective_transform.h  qr_code.h  ranged_histogram.h  resize.h  size2.h  sobel.h  surf.h  svd.h  threshold.h  utils.h  vector.h  warp.h
ucv/lib_ucv/include/baldzarika/ucv/gles/: fbo.h  hessian_detector.h  texture.h
ucv/lib_ucv/include/baldzarika/ucv/surf/: desciber.h  describer.h  feature_point.h  hessian_detector.h  orientation_estimator.h
ucv/lib_ucv/src/baldzarika/ucv/: homography.cpp  io.cpp  surf.cpp
ucv/lib_ucv/src/baldzarika/ucv/gles/: hessian_detector.cpp  shaders.cpp
ucv/lib_ucv_test/: CMakeLists.txt  lib_ucv_test.vcxproj  lib_ucv_test.vcxproj.filters  test.cpp  test_camera_pose.cpp  test_canny.cpp  test_kalman_filter.cpp  test_surf.cpp
ucv/lib_usg/: ReadMe.txt  lib_usg.vcxproj  lib_usg.vcxproj.filters
ucv/lib_usg/include/baldzarika/usg/: config.h
ucv/lib_usg/src/baldzarika/usg/: config.cpp
(+352 files in other folders)
